# seige-range

./: .coverage  .env.example  .gitignore  BACKLOG.md  CHANGELOG.md  CLAUDE.agent.md  CLAUDE.md  CLAUDE.memory.md  LEARNINGS.md  Makefile  README.md  WORK_PLAN.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
backend/: .coverage  .coveragerc  Dockerfile  entrypoint.sh  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt
backend/app/: config.py  database.py  main.py  models.py
backend/app/middleware/: logging_mw.py  metrics.py  rate_limit.py  security_headers.py
backend/app/models/: __init__.py  _base.py  activity.py  audit.py  challenge.py  competition.py  notification.py  user.py  webhook.py
backend/app/observability/: tracing.py
backend/app/routers/: admin.py  auth.py  competitions.py  health.py  instances.py  leaderboard.py  notifications.py  stats.py  writeups.py  ws.py
backend/app/schemas/: __init__.py  auth.py  challenge.py  common.py  competition.py  instance.py  leaderboard.py  solve.py  user.py  writeup.py
backend/app/security/: __init__.py
backend/app/services/: api_v1.py  auth.py  backup.py  challenge_browse.py  cheat_detector.py  email.py  email_verification.py  flag_dispatch.py  flag_submission.py  hints.py  mfa.py  notifications.py  orchestrator.py  password_reset.py  scheduler.py  scoreboard_cache.py  scoring.py  validator_registry.py  validator_sandbox.py  validator_subprocess_runner.py  webhook_dispatch.py  webhook_ssrf.py  workstation.py  ws_manager.py
backend/app/tools/: audit_verify.py  load_challenges.py  render_egress_allowlist.py  test_harness.py
backend/app/validators/: __init__.py  attack_chain.py  (+8 more)
backend/migrations/: env.py
backend/tests/: conftest.py
(+624 files in other folders)
